--- a/animation/example/simple-animation.yaml
+++ b/animation/example/simple-animation.yaml
@@ -1,13 +1,14 @@
 ---
 animations:
   - class: simple_player
-    sprites:
+    action: walk
+    tilesets:
       - player_body
       - player_legs
       - player_arms
       - player_head
     simple:
-      duration: 100
+      duration: 300
       defaults:
         flipHorizontal: false
         flipVertical: false
@@ -17,13 +18,14 @@ animations:
         - 3
 
   - class: simple_enemy
-    sprites:
+    action: attack
+    tilesets:
       - enemy_body
       - enemy_legs
       - enemy_arms
       - enemy_head
     simple:
-      duration: 100
+      duration: 300
       frames:
         - 1
         - 2
